# RingSync

./: .gitignore  CLAUDE.md  README.md
api/: .env.example  pyproject.toml
api/alarms/: api.py  consumers.py  enums.py  models.py  routing.py  schemas.py  utils.py
api/alarms/management/commands/: scheduler.py
api/alarms/migrations/: 0001_initial.py  0002_alter_alarm_id_alter_group_id.py  0002_initial.py  0003_alarm_is_one_time_alarm_repeats.py  0003_alarm_last_triggered_date.py  0003_alter_alarmevent_status.py
api/config/: api.py  asgi.py  settings.py
api/users/: api.py  models.py  schemas.py
api/users/migrations/: 0001_initial.py  0002_user_display_name_alter_user_id.py  0002_user_timezone.py  0003_authtoken.py
backend/: .env.example  .gitignore  Procfile  dump.rdb  pyproject.toml
backend/alarms/: admin.py  api.py  enums.py  models.py  schemas.py  utils.py
backend/alarms/migrations/: 0001_initial.py  0002_initial.py  0003_remove_silenced_state.py
backend/config/: asgi.py  celery.py  settings.py
backend/core/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_phone_number.py
backend/users/: admin.py  api.py  auth.py  models.py  schemas.py
backend/users/migrations/: 0001_initial.py  0002_friendship.py  0002_passwordresetcode.py
frontend/: .gitignore  app.json  babel.config.js  package.json  tailwind.config.js
frontend/.expo/types/: router.d.ts
frontend/app/: +not-found.tsx  _layout.tsx  onboarding.tsx  settings.tsx
frontend/constants/: Config.ts
(+50 files in other folders)
